--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
 , "author"      : { "name": "LLeo"
                   , "email": "lleoem@gmail.com"
                   , "url": "http://lleo-blog.blogspot.com/" }
+, "main"        : "index.js"
+, "scripts"     : { "test": "make test"
+		  , "test-cov": "make test-cov" }
+, "dependencies": { }
+, "devDependencies": { "mocha"  : ">=1.13.0"
+		     , "jscoverage" : ">=0.3.8" }
+, "engines"     : {"node" : ">=0.4.0"}
 , "files"       : [ "README.md"
+		  , "RED-BLOCK-TREE.md"
                   , "package.json"
                   , "Makefile"
-                  , "lib/*"
-                  , "test/*"
+                  , "lib/rbtree.js"
+                  , "bin/make_test_data.js"
+                  , "test/01-put-inorder-del-inorder.js"
+		  , "test/02-put-random-del-random2.js"
+		  , "test/03-get-exists.js"
+		  , "test/04-inorder.js"
                   ]
-, "main"        : "lib/rbtree.js"
-, "scripts"     : { "test": "make test" }
-, "dependencies": { }
-, "devDependencies": { }
-, "engines"     : {"node" : ">=0.4.0"}
 }
